# GigAgile

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: django.yml
app/: settings.py  urls.py
configs/: docker-compose.yml  env.example
core/: admin.py  models.py  serializers.py  urls.py
core/migrations/: 0001_initial.py
