[tool.poetry]
name = "gigagile"
version = "0.1.0"
description = "giga agile system"
authors = ["earhater <tem100502@mail.ru>", "II9tka <fffxx@mail.ru>"]
license = "GNU GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.5"
djangorestframework = "3.14.0"
markdown = "3.4.4"
environs = "9.5.0"
psycopg2-binary = "2.9.7"
pillow = "10.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
